<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ussd.mysoft.uz.UcellMenu"
    android:orientation="vertical"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_topbeel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?android:attr/actionBarSize"
        android:background="#966BFA">
        <ImageView
            android:id="@+id/backbeel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ucell"
            android:textSize="30sp"
            android:layout_marginLeft="30dp"
            style="bold"
            android:textColor="#ffffff"
            />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/topArea"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/gradientucell">


                <TextView
                    android:id="@+id/myDashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="Ucell yanada ko'proq "
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dashboard_adminName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myDashboard"
                    android:layout_alignEnd="@id/myDashboard"
                    android:layout_marginTop="-20dp"
                    android:text="IMKONIYATLAR"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-60dp"
                    android:layout_toEndOf="@id/myDashboard"
                    android:src="@drawable/ucell1" />


            </RelativeLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-80dp"
                android:alignmentMode="alignBounds"
                android:columnCount="2"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/ussd_ucell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#7549B3"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:src="@drawable/ussd_codes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/ussd_kodlar"
                            android:textSize="15sp"
                            android:textColor="#FBF9F9"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ucell_tarifrejalar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#7549B3"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="TODO"
                            android:src="@drawable/tarif_rejalar" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Ta'rif rejalar"
                            android:textSize="15sp"
                            android:textColor="#FBF9F9"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ucell_internetpaket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#7549B3"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/internet" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/internet_paketlari"
                            android:textSize="15sp"
                            android:textColor="#FBF9F9"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ucelldaqiqa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#7549B3"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="TODO"

                            android:src="@drawable/watch" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/daqiqalar"
                            android:textSize="15sp"
                            android:textColor="#FBF9F9"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/smsucell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#7549B3"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="TODO"

                            android:src="@drawable/messages1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Sms To'plamlari"
                            android:textSize="15sp"
                            android:textColor="#FBF9F9"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ucellxizmatlar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#7549B3"
                        android:orientation="vertical"
                        android:padding="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:contentDescription="TODO"
                            android:src="@drawable/service" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="Xizmatlar"
                            android:textSize="15sp"
                            android:textColor="#FBF9F9"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </GridLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>